<resources>
    <string name="app_name">sensorlib</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>

    <!-- Sensor Picker -->
    <string name="string_scan_results">Scan results</string>
    <string name="string_scan">Scanning for sensors…</string>
    <string name="string_select_sensors">Select sensors:</string>
    <string name="placeholder_rssi">\@ %1$d dB</string>
    <string name="placeholder_num_recordings">%1$d Recordings</string>
    <string name="placeholder_battery_level">%1$d %%</string>
    <string name="recently">Recent</string>

    <!-- Status Bar -->
    <string name="status_bar_disconnected">%1$s disconnected</string>
    <string name="status_bar_connecting">%1$s connecting</string>
    <string name="status_bar_connected">%1$s connected</string>
    <string name="status_bar_streaming">%1$s streaming</string>
    <string name="status_bar_loggging">%1$s logging</string>
    <string name="status_bar_simulating">%1$s simulating</string>
    <string name="status_bar_upgrading_firmware">%1$s upgrading firmware</string>
    <string name="status_bar_downloading">%1$s downloading data</string>

    <!-- Streaming Footer -->
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="disconnect">Disconnect</string>
    <string name="string_fab">FAB</string>

    <string name="string_sensor_name">Sensor Name: &lt;b>%1$s&lt;/b></string>
    <string name="string_sensor_address">Sensor Address: &lt;b>%1$s&lt;/b></string>
    <string name="string_manufacturer">Manufacturer: &lt;b>%1$s&lt;/b></string>
    <string name="string_model_number">Model Number: &lt;b>%1$s&lt;/b></string>
    <string name="string_firmware_revision">Firmware Revision: &lt;b>%1$s&lt;/b></string>
    <string name="string_hardware_revision">Hardware Revision: &lt;b>%1$s&lt;/b></string>
    <string name="sensor_config">Sensor Config: %1$s</string>


    <!-- Share Dialog -->
    <string name="open_folder">Open Folder</string>
    <string name="share_recording">Share Recording via…</string>

    <!-- Config -->
    <string name="set_time">Set Time</string>
    <string name="time_info">%1$s</string>
</resources>
