<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_sensor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/string_sensor_name"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_sensor_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/string_sensor_address"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_sensor_manufacturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/string_manufacturer"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_sensor_model_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/string_model_number"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_sensor_firmware_revision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/string_firmware_revision"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_sensor_hardware_revision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/string_hardware_revision"
        android:textSize="14sp" />


    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_ok"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/ok" />
    </RelativeLayout>

</LinearLayout>