<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/tv_scanning"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/string_scan"
            android:textSize="16sp" />
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        android:layout_below="@id/header"
        android:layout_marginTop="8dp" />

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/button_cancel"
            android:text="@string/ok" />
    </RelativeLayout>

</RelativeLayout>