<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_footer"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fab_size"
        android:layout_alignTop="@+id/fab"
        android:gravity="center">

        <Button
            android:id="@+id/button_start_stop"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/button_start_stop_color"
            android:backgroundTintMode="multiply"
            android:enabled="false"
            android:text="@string/start"
            android:textColor="@color/white"
            android:visibility="invisible"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_disconnect"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/button_disconnect_color"
            android:backgroundTintMode="multiply"
            android:text="@string/disconnect"
            android:gravity="end|center_vertical"
            android:textColor="@color/white"
            android:visibility="invisible"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center"
        android:layout_margin="8dp"
        android:contentDescription="@string/string_fab"
        android:src="@drawable/ic_mad_launcher"
        app:backgroundTint="@color/accent"
        app:elevation="@dimen/elevation_fab"
        app:fabSize="normal"
        app:pressedTranslationZ="@dimen/elevation_fab_pressed" />

</RelativeLayout>
